--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,14 +24,14 @@ steps:
     args: 
       - 'build'
       - '-t'
-      - 'southamerica-east1-docker.pkg.dev/upgradlabs-1738334790345/amit23comp/myapp:$BUILD_ID'
+      - 'us-west1-docker.pkg.dev/upgradlabs-1740997930209/amit23comp/myapp:$BUILD_ID'
       - '.'
   # Step 4: Push Docker image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: 
       - 'push'
-      - 'southamerica-east1-docker.pkg.dev/upgradlabs-1738334790345/amit23comp/myapp:$BUILD_ID'
+      - 'us-west1 -docker.pkg.dev/upgradlabs-1740997930209/amit23comp/myapp:$BUILD_ID'
       
 images:
-  - 'southamerica-east1-docker.pkg.dev/upgradlabs-1738334790345/amit23comp/myapp:$BUILD_ID'
-logsBucket: "gs://firstbucket122"
+  - 'us-west1-docker.pkg.dev/upgradlabs-1740997930209/amit23comp/myapp:$BUILD_ID'
+logsBucket: "gs://deepbucket2"
